# prismatic

./: Cargo.toml  README.md
src/: lib.rs
tests/: accessors_test.rs  basic_test.rs  partial_test.rs  signature_test.rs  uninitialized_test.rs  unintiailized_test.rs
